@@ -1,5 +1,6 @@
 0.11
  - Fix check_language().
+ - Fix Unicode conversions in Item doc example.
  - Improve example in Form documentation.
  - Improve example in Sense documentation.
 
